结构优化，增加权限管理